--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -33,14 +33,14 @@ rotor_configuration:
   # 1/4mg = (mean_hover_pwm / 2**16) * omega_max^2 * force_constants
   # force_constants = 1/4mg * kf / omega_max^2
   # kf = force_constants * omega_max^2 / 1/4mg
-  # - 2.350347298350041e-08 # kf = 2**16 / mean_hover_pwm = 1.6, 悬浮推力算出来
-  # - 2.350347298350041e-08
-  # - 2.350347298350041e-08
-  # - 2.350347298350041e-08
-  - 2.2034505922031636e-08 # simopt
-  - 2.2034505922031636e-08
-  - 2.2034505922031636e-08
-  - 2.2034505922031636e-08
+  # - 2.375058893776619e-08 # BO paper
+  # - 2.375058893776619e-08
+  # - 2.375058893776619e-08
+  # - 2.375058893776619e-08
+  - 2.3338729013989898e-08 # simopt
+  - 2.3338729013989898e-08
+  - 2.3338729013989898e-08
+  - 2.3338729013989898e-08
   # - 1.826369950879092e-08 # kf = 1.3
   # - 1.826369950879092e-08
   # - 1.826369950879092e-08
@@ -62,7 +62,7 @@ rotor_configuration:
   - 3.92699082
   - 5.49778714
   # time_constant: 0.025 # 0.4, DATT, tau = dt / time_constant
-  time_constant: 0.018472893755721052 # simopt
+  time_constant: 0.021046190750914448 # simopt
   # time_constant: 0.01 # simopt
 controller_configuration: # invalid
   gain:
