--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -15,7 +15,7 @@ inertia:
   yy: 1.4e-5
   yz: 0.0
   zz: 2.17e-5
-mass: 0.0307 # cf13: 0.0321, cf11:0.0308, cf12: 0.0307
+mass: 0.03 # cf13: 0.0321, cf11:0.0308, cf12: 0.0307
 l: 0.096
 drag_coef: 0.2
 rotor_configuration:
@@ -37,14 +37,14 @@ rotor_configuration:
   # - 2.375058893776619e-08
   # - 2.375058893776619e-08
   # - 2.375058893776619e-08
-  - 2.3338729013989898e-08 # simopt
-  - 2.3338729013989898e-08
-  - 2.3338729013989898e-08
-  - 2.3338729013989898e-08
-  # - 1.826369950879092e-08 # kf = 1.3
-  # - 1.826369950879092e-08
-  # - 1.826369950879092e-08
-  # - 1.826369950879092e-08
+  # - 2.3338729013989898e-08 # simopt
+  # - 2.3338729013989898e-08
+  # - 2.3338729013989898e-08
+  # - 2.3338729013989898e-08
+  - 2.6084461839165174e-08 # kf = 1.9
+  - 2.6084461839165174e-08
+  - 2.6084461839165174e-08
+  - 2.6084461839165174e-08
   max_rotation_velocities:     
   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
   - 2315
@@ -63,7 +63,7 @@ rotor_configuration:
   - 5.49778714
   # time_constant: 0.025 # 0.4, DATT, tau = dt / time_constant
   time_constant: 0.021046190750914448 # simopt
-  # time_constant: 0.01 # simopt
+  # time_constant: 0.015 # simopt
 controller_configuration: # invalid
   gain:
   - 0.0052
