--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,8 +5,8 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_simopt1_smooth02.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_smooth02_simopt1/07-03_21-33/wandb/run-20240703_213310-51gcndtt/files/checkpoint_final.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -25,7 +25,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Track_smooth02_simopt2_Tm002
+  run_name: Track_smooth02_simopt1_eval
   # run_name: debug
   job_type: train
   entity: chenjy
