--- a/cfg/task/HideAndSeek_square.yaml
+++ b/cfg/task/HideAndSeek_square.yaml
@@ -29,7 +29,9 @@ arena_size: 3.0
 v_drone: 1.0
 v_prey: 1.3
 
-collision_coef: 20.0
+catch_reward_coef: 20.0
+detect_reward_coef: 10.0
+collision_coef: 50.0
 catch_radius: 0.3
 drone_detect_radius: 0.3
 target_detect_radius: 0.5
