--- a/cfg/task/HideAndSeek_square.yaml
+++ b/cfg/task/HideAndSeek_square.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 10
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -16,11 +16,10 @@ time_encoding: true
 # action_transform: multidiscrete:4
 action_transform: rate
 
-# use rejection sampling validation
-use_validation: 1
+use_eval: 0
 
-# evalution scenario
-evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
+# # evalution scenario
+# evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
 # exp
 num_agents: 4
@@ -32,6 +31,7 @@ v_prey: 1.3
 catch_reward_coef: 20.0
 detect_reward_coef: 10.0
 collision_coef: 50.0
+speed_coef: 100.0
 catch_radius: 0.3
 drone_detect_radius: 0.3
 target_detect_radius: 0.5
