--- a/cfg/task/HideAndSeek_square.yaml
+++ b/cfg/task/HideAndSeek_square.yaml
@@ -13,8 +13,7 @@ drone_model: Crazyflie
 force_sensor: false
 time_encoding: true
 
-# action_transform: multidiscrete:4
-action_transform: rate
+action_transform: PIDrate
 
 use_eval: 0
 
