--- a/cfg/task/HideAndSeek_square.yaml
+++ b/cfg/task/HideAndSeek_square.yaml
@@ -22,18 +22,20 @@ use_eval: 0
 
 # exp
 num_agents: 3
+use_wall_blocked: 0
 
 arena_size: 2.0
 v_drone: 1.0
 v_prey: 0.0
 
+dist_reward_coef: 10.0
 catch_reward_coef: 20.0
 detect_reward_coef: 10.0
-collision_coef: 50.0
+collision_coef: 100.0
 speed_coef: 100.0
-catch_radius: 0.3
-drone_detect_radius: 0.3
-target_detect_radius: 0.5
+catch_radius: 1.0
+drone_detect_radius: 3.0
+target_detect_radius: 3.0
 collision_radius: 0.1
 
 cylinder:
