--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/drone3_arena2/07-07_18-06/wandb/run-20240707_180621-e6bnfxns/files/checkpoint_603193344.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/fixedtarget_arena2_woblocked/07-07_21-08/wandb/run-20240707_210825-m4le4958/files/checkpoint_final.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -19,13 +19,12 @@ viewer:
   # front
   eye: [0., -0.005, 4.]
   lookat: [0., 0., 1.]
-  # # follow drone
-  # eye: [0., 2.0, 2.5]
-  # lookat: [0., 0., 1.0]
+  # eye: [0., -5.0, 10.]
+  # lookat: [0., 4.0, 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixedtarget_arena2
+  run_name: large_catch_dist_reward
   job_type: train
   entity: chenjy
   project: pursuit-evasion
