--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,8 +5,8 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/large_catch_dist_reward/07-08_16-46/wandb/run-20240708_164645-clu1pm61/files/checkpoint_865337344.pt
-# model_dir: null
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/fixedtarget_woblocked_catch05_detect05/07-08_21-03/wandb/run-20240708_210400-inhjaq3j/files/checkpoint_final.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -24,7 +24,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixedtarget_woblocked_catch05_detect05
+  run_name: fixedtarget_woblocked
   job_type: train
   entity: chenjy
   project: pursuit-evasion
