--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -24,12 +24,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixedtarget_woblocked_random
+  # run_name: fixedtarget_woblocked_random
+  run_name: debug
   job_type: train
   entity: chenjy
   project: pursuit-evasion
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
