--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/catch0_5_target1_history10_future5_windowstep10_TP/07-14_15-20/wandb/run-20240714_152006-jorj66tl/files/checkpoint_157548544.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch1_0_target1_3_TP/07-14_22-26/wandb/run-20240714_222602-47ragrm0/files/checkpoint_2988703744.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -24,7 +24,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: catch1_0_target1_3_TP
+  run_name: catch0_5_target1_3_TP_blocked
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -36,7 +36,7 @@ wandb:
   tags: 
 
 defaults:
-  - task: HideAndSeek_square
+  - task: HideAndSeek_square_partial
   # - task: Track
   - algo: mappo
   - _self_
