update rejection sampling

--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,8 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_target1_3_TP_blocked_future5_window10_distance5/07-15_15-48/wandb/run-20240715_154806-evmm8xzn/files/checkpoint_708050944.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_blocked/07-16_11-10/wandb/run-20240716_111039-2cn6iwe5/files/checkpoint_1887698944.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_blocked/07-16_11-10/wandb/run-20240716_111039-2cn6iwe5/files/checkpoint_681836544.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -19,14 +20,14 @@ viewer:
   # # front
   # eye: [0., -0.005, 6.]
   # lookat: [0., 0., 1.]
-  eye: [0., -1.0, 5.]
+  eye: [-1.0, 0.0, 5.]
   lookat: [0., 0.0, 1.]
   # eye: [0., -5.0, 10.]
   # lookat: [0., 4.0, 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: catch0_2_TP_blocked
+  run_name: catch0_5_TP_blocked
   # run_name: debug
   job_type: train
   entity: chenjy
