--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -20,7 +20,7 @@ use_eval: 0
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: '2cylinders' # '2cylinders', '4rooms', 'debug'
+scenario_flag: '6cylinders' # '2cylinders', '4rooms', '5cylinders'
 
 # exp
 num_agents: 3
@@ -46,7 +46,7 @@ collision_radius: 0.1
 
 cylinder:
   size: 0.1
-  num: 2
+  num: 6
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
