--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -20,7 +20,7 @@ use_eval: 0
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: '6cylinders' # '2cylinders', '4rooms', '5cylinders'
+scenario_flag: '2cylinders' # '2cylinders', '4rooms', '5cylinders'
 
 # exp
 num_agents: 3
@@ -29,6 +29,7 @@ use_prediction_net: 0
 history_step: 10
 future_predcition_step: 5
 window_step: 1
+use_target_groundtruth: 0
 
 arena_size: 2.2
 v_drone: 1.0
@@ -46,7 +47,7 @@ collision_radius: 0.1
 
 cylinder:
   size: 0.1
-  num: 6
+  num: 2
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
