--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -20,7 +20,7 @@ use_eval: 0
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: '2cylinders' # '2cylinders', '4rooms', '6cylinders'
+scenario_flag: '2cylinders' # '2cylinders', '4rooms', '6cylinders', 'cross', ''
 
 # exp
 num_agents: 3
