--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -20,18 +20,20 @@ use_eval: 0
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: '2cylinders' # '2cylinders', '4rooms', '6cylinders', 'cross', ''
+scenario_flag: '6cylinders' # '2cylinders', '4rooms', '6cylinders', 'cross', ''
 
 # exp
 num_agents: 3
 use_wall_blocked: 1
+
+# TP net param
 use_prediction_net: 1
 history_step: 10
 future_predcition_step: 5
 window_step: 1
 use_target_groundtruth: 0
 
-arena_size: 2.2
+arena_size: 3.0
 v_drone: 1.0
 v_prey: 1.3
 
@@ -48,7 +50,7 @@ collision_radius: 0.1
 use_random_cylinder: 0
 cylinder:
   size: 0.1
-  num: 2
+  num: 6
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
