--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -24,10 +24,10 @@ scenario_flag: '6cylinders' # '2cylinders', '4rooms', '6cylinders', 'cross', ''
 
 # exp
 num_agents: 3
-use_wall_blocked: 1
+use_partial_obs: 1 # sanity check
 
 # TP net param
-use_prediction_net: 1
+use_prediction_net: 1 # only used in use_partial_obs = 1
 history_step: 10
 future_predcition_step: 5
 window_step: 1
