--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_window1/07-19_12-00/wandb/run-20240719_120034-qehz35x7/files/checkpoint_629407744.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/TP_window1_6cylinders/07-21_16-41/wandb/run-20240721_164130-dg9nqxgw/files/checkpoint_917766144.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/TP_window1_6cylinders_newTPinput_mask1e9/07-21_23-51/wandb/run-20240721_235105-f2xfvfvg/files/checkpoint_1940127744.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -27,13 +27,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: TP_window1_6cylinders_newTPinput_mask1e9
-  # run_name: debug
+  # run_name: woTP_6cylinders
+  run_name: debug
   job_type: train
   entity: chenjy
   project: pursuit-evasion
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
