--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -36,6 +36,7 @@ arena_size: 2.2
 v_drone: 1.0
 v_prey: 1.3
 
+use_predicted_dist_reward: 0
 dist_reward_coef: 5.0
 catch_reward_coef: 10.0
 detect_reward_coef: 0.0
