--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -15,8 +15,6 @@ time_encoding: true
 
 action_transform: PIDrate
 
-use_eval: 0
-
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
@@ -24,13 +22,16 @@ scenario_flag: '6cylinders' # '2cylinders', '4rooms', '6cylinders', 'cross', ''
 
 # exp
 num_agents: 3
-use_partial_obs: 1 # sanity check
 
-# naive cl
-use_naive_cl: 0
+# flag
+use_eval: 0
+use_naive_cl: 0 # use naive cl
+use_partial_obs: 1
+use_prediction_net: 1 # only used in use_partial_obs = 1
+use_predicted_dist_reward: 1
+use_random_cylinder: 0 # fixed task config
 
 # TP net param
-use_prediction_net: 1 # only used in use_partial_obs = 1
 history_step: 10
 future_predcition_step: 5
 window_step: 1
@@ -39,7 +40,6 @@ arena_size: 2.2
 v_drone: 1.0
 v_prey: 1.3
 
-use_predicted_dist_reward: 0
 dist_reward_coef: 5.0
 catch_reward_coef: 10.0
 detect_reward_coef: 0.0
@@ -50,7 +50,6 @@ drone_detect_radius: 100.0
 target_detect_radius: 100.0
 collision_radius: 0.1
 
-use_random_cylinder: 0
 cylinder:
   size: 0.1
   num: 6
