--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -28,7 +28,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: TP_6cylinders_add_predicted_dist_reward
-  run_name: cross_demo
+  run_name: narrow_TP
   job_type: train
   entity: chenjy
   project: pursuit-evasion
