--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -28,12 +28,12 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: 7cylinders_newreward
-  run_name: cross
+  run_name: debug
   job_type: train
   entity: chenjy
   project: pursuit-evasion
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
