--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_window1/07-19_12-00/wandb/run-20240719_120034-qehz35x7/files/checkpoint_629407744.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/narrow_TP/07-23_21-58/wandb/run-20240723_215807-5ad5krst/files/checkpoint_2621702144.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/7cylinders_newreward/07-24_15-31/wandb/run-20240724_153115-5wdmi6it/files/checkpoint_943980544.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -27,13 +27,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: 7cylinders_newreward
-  run_name: debug
+  run_name: 7cylinders
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: pursuit-evasion
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
