--- a/cfg/task/HideAndSeek_square_partial.yaml
+++ b/cfg/task/HideAndSeek_square_partial.yaml
@@ -18,7 +18,7 @@ action_transform: PIDrate
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: '7cylinders' # '2cylinders', 'narrow', '7cylinders', '1corner', 'corner', 'cross'
+scenario_flag: 'narrow' # 'narrow', '9cylinders', '1corner', 'cross', 'corner'
 
 # exp
 num_agents: 3
@@ -36,7 +36,7 @@ history_step: 10
 future_predcition_step: 5
 window_step: 1
 
-arena_size: 2.2
+arena_size: 3.0
 v_drone: 1.0
 v_prey: 1.3
 
@@ -52,7 +52,7 @@ collision_radius: 0.05
 
 cylinder:
   size: 0.1
-  num: 7
+  num: 13
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
