--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_window1/07-19_12-00/wandb/run-20240719_120034-qehz35x7/files/checkpoint_629407744.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/7cylinders/07-24_21-23/wandb/run-20240724_212324-uo9pzyim/files/checkpoint_209977344.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/1corner.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -17,16 +17,16 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  # # front
-  eye: [-0.005, 0.0, 8.]
-  lookat: [0., 0., 1.]
-  # eye: [-1.0, 0.0, 8.]
-  # lookat: [0., 0.0, 1.]
+  # up
+  # eye: [-0.005, 0.0, 5.]
+  # lookat: [0., 0., 1.]
+  eye: [-0.7, 0.0, 2.]
+  lookat: [0., 0.0, 1.]
 
 wandb:
   group: ${oc.select:..task.name}
+  # run_name: debug
   run_name: narrow
-  # run_name: 1corner_eval
   job_type: train
   entity: chenjy
   project: pursuit-evasion
