--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -25,13 +25,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: debug
+  run_name: 2cylinders_wosmooth
   # run_name: narrow
   job_type: train
   entity: chenjy
   project: pursuit-evasion
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
