--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -17,28 +17,28 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  # up
-  eye: [-0.005, 0.0, 5.]
-  lookat: [0., 0., 1.]
-  # eye: [-0.7, 0.0, 2.]
-  # lookat: [0., 0.0, 1.]
+  # # up
+  # eye: [-0.005, 0.0, 30.]
+  # lookat: [0., 0., 1.]
+  eye: [-2.0, 0.0, 5.]
+  lookat: [0., 0.0, 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: random2_woTP_wosmooth
-  run_name: debug
+  run_name: empty_catch0_3_v1_3
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: RAL
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
   # - task: HideAndSeek_square_partial
-  - task: HideAndSeek_circle_fully
+  - task: HideAndSeek_circle_partial
   # - task: Track
   - algo: mappo
   - _self_
