--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,8 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_window1/07-19_12-00/wandb/run-20240719_120034-qehz35x7/files/checkpoint_629407744.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/empty_catch0_3_v1_3/07-28_22-59/wandb/run-20240728_225903-ud3zthal/files/checkpoint_1822031872.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/empty_catch0_3_v1_3/07-28_22-59/wandb/run-20240728_225903-ud3zthal/files/checkpoint_1822031872.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -18,10 +18,10 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # # up
-  # eye: [-0.005, 0.0, 30.]
-  # lookat: [0., 0., 1.]
-  eye: [-2.0, 0.0, 5.]
-  lookat: [0., 0.0, 1.]
+  eye: [-0.005, 0.0, 5.]
+  lookat: [0., 0., 1.]
+  # eye: [-2.0, 0.0, 5.]
+  # lookat: [0., 0.0, 1.0]
 
 wandb:
   group: ${oc.select:..task.name}
