--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_partial
+name: HideAndSeek_circle_partial_TP
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -29,12 +29,17 @@ use_partial_obs: 1
 use_random_cylinder: 0 # fixed task config
 use_DFS_validation: 0 # only use_random_cylinder = 1
 
+# TP net param
+history_step: 10
+future_predcition_step: 5
+window_step: 1
+
 arena_size: 1.1
 max_height: 1.2
 v_drone: 1.0
 v_prey: 1.3
 
-dist_reward_coef: 10.0
+dist_reward_coef: 1.0
 catch_reward_coef: 5.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
@@ -42,7 +47,7 @@ speed_coef: 10.0
 smoothness_coef: 0.0
 
 # env param
-catch_radius: 0.3
+catch_radius: 0.5
 drone_detect_radius: 100.0
 target_detect_radius: 100.0
 collision_radius: 0.07
