--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -26,7 +26,7 @@ num_agents: 4
 # flag
 use_eval: 0
 use_partial_obs: 1
-use_random_cylinder: 0
+use_random_cylinder: 1
 use_DFS_validation: 0 # only use_random_cylinder = 1
 
 # TP net param
@@ -47,14 +47,14 @@ speed_coef: 5.0
 smoothness_coef: 0.0
 
 # env param
-catch_radius: 0.3
+catch_radius: 0.5
 drone_detect_radius: 100.0
 target_detect_radius: 100.0
 collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
   max_num: 5
   obs_max_cylinder: 5
   # max_active: 3
