--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -39,7 +39,7 @@ max_height: 1.2
 v_drone: 1.0
 v_prey: 1.0
 
-dist_reward_coef: 1.0
+dist_reward_coef: 10.0
 catch_reward_coef: 10.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
@@ -54,8 +54,8 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
-  max_num: 5
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  max_num: 1
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
