--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -18,14 +18,14 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # up
-  eye: [-0.005, 0.0, 5.]
-  lookat: [0., 0., 1.]
-  # eye: [-2.0, 0.0, 5.]
-  # lookat: [0., 0.0, 1.0]
+  # eye: [-0.005, 0.0, 5.]
+  # lookat: [0., 0., 1.]
+  eye: [-2.5, 0.0, 2.]
+  lookat: [0., 0.0, 0.1]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: random0and1_catch0_3_v1_0_TP
+  run_name: random0and1_catch0_3_v1_0_TP_GAN
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -39,7 +39,7 @@ wandb:
 defaults:
   # - task: HideAndSeek_square_partial
   # - task: HideAndSeek_circle_partial_woTP
-  - task: HideAndSeek_circle_partial_TP
-  # - task: HideAndSeek_circle_partial_TP_GAN
+  # - task: HideAndSeek_circle_partial_TP
+  - task: HideAndSeek_circle_partial_TP_GAN
   - algo: mappo
   - _self_
