--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -37,7 +37,7 @@ window_step: 1
 arena_size: 1.1
 max_height: 1.2
 v_drone: 1.0
-v_prey: 1.0
+v_prey: 1.3
 
 dist_reward_coef: 10.0
 catch_reward_coef: 10.0
@@ -54,7 +54,7 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
   max_num: 1
   obs_max_cylinder: 5
   # max_active: 3
