--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -18,7 +18,8 @@ action_transform: PIDrate
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: 'empty' # 'empty', '2cylinders', 'center', 'corner', 'wall', 'box'
+scenario_flag: '2line' # 'empty', 'corner', 'wall', '2line'
+# '2cylinders', 'center',
 
 # exp
 num_agents: 4
@@ -54,8 +55,8 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
-  max_num: 1
+  fixed_num: 5 # None: random num and pos, else only fixed num, random pos
+  max_num: 5
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
