--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: empty_catch0_3_v1_3_TP
-  run_name: debug
+  run_name: GAN0to5_catch0_3_v1_3_TP
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: RAL
