--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -18,8 +18,7 @@ action_transform: PIDrate
 # # evalution scenario
 # evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
-scenario_flag: 'empty' # 'empty', 'corner', 'wall', '2line'
-# '2cylinders', 'center',
+scenario_flag: 'empty' # 'empty', 'corner', 'center', 'wall', '2line'
 
 # exp
 num_agents: 4
@@ -38,7 +37,7 @@ window_step: 1
 arena_size: 0.9
 max_height: 1.2
 v_drone: 1.0
-v_prey: 2.4
+v_prey: 1.3
 
 dist_reward_coef: 10.0
 catch_reward_coef: 10.0
@@ -55,7 +54,7 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
   max_num: 5
   obs_max_cylinder: 5
   # max_active: 3
