--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,8 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/catch0_5_TP_window1/07-19_12-00/wandb/run-20240719_120034-qehz35x7/files/checkpoint_629407744.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/empty_catch0_3_v1_3_TP_arena0_9/08-06_18-12/wandb/run-20240806_181241-3ii4pa9l/files/checkpoint_799670272.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/empty_catch0_3_v1_3_TP_arena0_9.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -26,7 +26,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: GAN0to5_catch0_3_v1_3_TP
-  run_name: empty_catch0_3_v2_4_TP_arena0_9_loadv1_3
+  run_name: random0to5_catch0_3_v1_3_TP_arena0_9
   job_type: train
   entity: chenjy
   project: RAL
